--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,14 @@ jobs:
       - name: Setup Node packages
         run: npm ci
       - name: Build Angular (English)
-        run: ng build --configuration=production
+        run: npm run ng build --configuration=production
       - name: Capture English build artifact
         uses: actions/upload-artifact@main
         with:
           name: English
           path: dist/osm/
       - name: Build Angular (Simplified Chinese)
-        run: ng build --configuration=production,zh-Hans
+        run: npm run ng build --configuration=production,zh-Hans
       - name: Capture Simplified Chinese build artifact
         uses: actions/upload-artifact@main
         with:
