--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,9 @@ jobs:
           name: English
           path: dist/osm/
       - name: Build Angular (Simplified Chinese)
-        run: npm run ng build --configuration=production,zh-Hans
+        run: |
+          rm -rf ./dist/
+          npm run ng build --configuration=production,zh-Hans
       - name: Capture Simplified Chinese build artifact
         uses: actions/upload-artifact@main
         with:
