--- a/angular.json
+++ b/angular.json
@@ -12,8 +12,7 @@
 				"sourceLocale": "en-US",
 				"locales": {
 					"zh-Hans": {
-						"translation": "src/locale/messages.zh-Hans.xlf",
-						"subPath": ""
+						"translation": "src/locale/messages.zh-Hans.xlf"
 					}
 				}
 			},
@@ -55,7 +54,14 @@
 									"maximumError": "4kb"
 								}
 							],
-							"outputHashing": "all"
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.prod.ts"
+								}
+							],
+							"outputHashing": "all",
+							"localize": true
 						},
 						"development": {
 							"localize": true,
@@ -64,13 +70,13 @@
 							"sourceMap": true
 						}
 					},
-					"defaultConfiguration": "production"
+					"defaultConfiguration": "development"
 				},
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
 						"zh-Hans": {
-							"buildTarget": "osm:build:development,zh-Hans"
+							"buildTarget": "osm:build:zh-Hans"
 						},
 						"production": {
 							"buildTarget": "osm:build:production"
